# tiny-ball-detector

./: .gitignore  README.md  pyproject.toml
notebooks/: gridtracknet.ipynb  tracknet.ipynb
src/tiny_ball_detector/dataset/: gridtracknet_dataset.py  image_parser.py  tracknet_dataset.py
src/tiny_ball_detector/models/: __init__.py  conv_bloc.py  gridtracknet.py  tracknet.py
src/tiny_ball_detector/test/: time.py
src/tiny_ball_detector/utils/: frame_generator.py
